bugfix: lms-ui-combobox autocomplete postition fix and disable wrapping of autocomplete menu items

--- a/img/style.less
+++ b/img/style.less
@@ -1661,6 +1661,7 @@ a.lms-ui-combobox-toggle {
 	& .ui-menu-item {
 		.ui-menu-item-wrapper {
 			padding: 1px 1em 1px 0.4em;
+			white-space: nowrap;
 			&:not(.ui-state-active) {
 				color: black;
 			}
